# ggml-ot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/actions/run-pytest-reports/: action.yml
.github/workflows/: linter.yml  publish.yml  pytest.yml
docs/: .gitignore
docs/source/: api.md  conf.py  contributors_guide.md  index.md  installation.md  references.md  scRNA.md  synth.md  tutorials.md  visualization.md
docs/source/api/: core.rst  data.rst  gene.rst  gmm.rst  index.md  plot.rst  settings.rst
docs/source/contributors/: development.md  documentation.md  issues.md  release.md  testing.md
docs/source/tutorials/: 0_ggml_method_introduction.ipynb  1_basic_tutorial.ipynb  3_hyperparameter_tuning.ipynb  4_gpu_sinkhorn.ipynb  5_fast_approximations.ipynb  _index_example.ipynb  ggml_anndata_tutorial.ipynb  ggml_cross_validation.ipynb  ggml_fast_approximations.ipynb  ggml_hyperparameter_tuning.ipynb  ggml_method_introduction.ipynb  ggml_scRNA_fast.ipynb  ggml_toydata_tutorial.ipynb  ggml_tuning.ipynb  ggml_visualization.ipynb  index.md
examples/: ggml_disease_cell_subtypes.ipynb  ggml_scRNA_centroids.ipynb  ggml_scRNA_fast.ipynb  ggml_toydata_tutorial.ipynb  ggml_tuning.ipynb  ggml_visualization.ipynb  index_example.ipynb  scRNA_example.ipynb  scRNA_test.ipynb  synth_Test.ipynb  synth_example.ipynb
ggml_ot/: __init__.py  settings.py
ggml_ot/_utils/: __init__.py  _anndata_utils.py  _array.py  _batch.py  _covariance.py  _docs.py  _linalg.py  _splits.py  _transformation.py  _validate.py  _weights.py
ggml_ot/benchmark/: __init__.py  classify.py  cluster.py  evaluation.py  hyperparams.py
ggml_ot/data/: __init__.py  _parameter_setup.py  anndata.py  cellxgene.py  generic.py  interface.py  synthetic.py  synthetic_gmm.py
ggml_ot/distances/: __init__.py  _cached_distances.py  _masked_pairwise.py  _solvers.py  bures_wasserstein.py  mahalanobis.py  ot.py
ggml_ot/gene/: __init__.py  _axis.py  _decoupler.py  _enrichment.py  _gmm_summary.py  _grouping.py  interpret_subspace.py  ranking.py
ggml_ot/gmm/: LICENSE.md  _GaussianMixture.py  __init__.py  _anndata_dataset_interface.py  _fit_core.py  _generic_dataset_interface.py  _sample_specific_fit.py  _select_k_comps.py  fit.py  validation.py
ggml_ot/optimization/: __init__.py  _ggml.py  _triplets.py  api.py  loss.py  params.py  regularization.py  triplets.py
ggml_ot/plot/: __init__.py  _utils.py  clustermap.py  contour.py  embedding.py  enrichment.py  eval.py  gmm.py  latent_axes.py  plotting.py  subspace.py
src/ggml-ot/benchmark/: __init__.py
src/ggml-ot/data/: synth.py  util.py
src/ggml-ot/distances/: dists.py
src/ggml-ot/plot/: plotting.py
src/ggml_ot/: __init__.py  ggml.py
src/ggml_ot/benchmark/: __init__.py  knn.py
src/ggml_ot/data/: __init__.py  scRNA.py  synth.py  util.py
src/ggml_ot/distances/: dists.py
src/ggml_ot/docs/: conf.py
src/ggml_ot/genes/: interpret_subspace.py
src/ggml_ot/plot/: plotting.py
tests/: __init__.py  conftest.py  dataset_params.yml  ggml_params.yml  test_API.py  test_AnnData_integration.py  test_GGML.py  test_GGML_on_synth.py  test_GPU.py  test_IO.py  test_TripletDataset.py  test_example_synth.py  test_gene_interpretation.py  test_gmm_ggml.py  test_gmm_performance.py  test_minibatch_performance.py  test_module_distance.py  test_module_gene.py  test_module_gmm.py  test_module_plot.py  test_module_regularization.py  test_module_settings.py  test_module_synthetic_gmm.py  test_module_utils.py  test_performance.py  test_performance_snapshot_utils.py  test_pytest_setup.py  test_synthetic_gmm_benchmark.py  test_training_API.py  test_validations.py
tests/data/performance_snapshots/: classification_performance.json  computation_time.json  performance_overview.html  performance_overview.md
tests/utils/: config.py  performance_snapshot.py  prefit_gmm.py  setup_dataset.py
