[project]
name = "ggml-ot"
version = "0.0.1"
description = "Global Ground Metric Learning"
authors = [{ name = "damin", email = "damin.kuehn@rwth-aachen.de" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating Systems :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Framework :: Jupyter",
  "Framework :: Sphinx",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Medical Science Apps",
]
dependencies = [
  "tqdm (>=4.67.1,<5.0.0)",
  "scipy (>=1.15.2,<2.0.0)",
  "matplotlib (>=3.10.1,<4.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "umap-learn (>=0.5.7,<0.6.0)",
  "numpy (>=2.2.4,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "scikit-learn (==1.5.1)",
  "gprofiler-official (>=1.0.0,<2.0.0)",
  "metric-learn (>=0.7.0,<0.8.0)",
  "pathlib (>=1.0.1,<2.0.0)",
  "pot (>=0.9.5,<0.10.0)",
  "pydiffmap (>=0.2.0.1,<0.3.0.0)",
  "python-voi (>=0.0.3,<0.0.4)",
  "scanpy (==1.10.4)",
  "anndata (>=0.11.4,<0.12.0)",
  "torch (>=2.6.0,<3.0.0)",
  "torchaudio (>=2.6.0,<3.0.0)",
  "torchvision (>=0.21.0,<0.22.0)",
]

[project.urls]
Homepage = "https://github.com/DaminK/ggml-ot"
Issues = "https://github.com/DaminK/ggml-ot/issues"

[tool.poetry]
name = "ggml-ot"
version = "0.0.1"
description = "Global Ground Metric Learning"
authors = ["Damin Kuehn <damin.kuehn@rwth-aachen.de"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "5.0.2"
sphinx-autorun = "^1.1.1"
sphinx-rdt-theme  = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

